Fixed Overflow Scrolling Issue

--- a/sass/partials/_base-styles.scss
+++ b/sass/partials/_base-styles.scss
@@ -1,4 +1,4 @@
-body {
+.home-body {
     background-color: black;
     width: 100vw;
     height: 100vh;
