--- a/sass/styles.css
+++ b/sass/styles.css
@@ -221,7 +221,7 @@ html {
   overflow: hidden;
 }
 
-body {
+.home-body {
   background-color: black;
   width: 100vw;
   height: 100vh;
